[gd_scene load_steps=24 format=2]

[ext_resource path="res://objects/enventary/sprites/pixil-frame-0 (8).png" type="Texture" id=1]
[ext_resource path="res://objects/enventary/sprites/pixil-frame-0 (11).png" type="Texture" id=2]
[ext_resource path="res://objects/notebook/sprites/pixil-frame-0 (8).png" type="Texture" id=3]
[ext_resource path="res://fonts/20930.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://objects/tests/1l/q1.gd" type="Script" id=5]
[ext_resource path="res://objects/tests/1l/q2.gd" type="Script" id=6]
[ext_resource path="res://objects/tests/1l/q3.gd" type="Script" id=7]
[ext_resource path="res://objects/tests/1l/test.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 54.5, 24 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 111.25, 22.5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 54.25, 23 )

[sub_resource type="DynamicFont" id=8]
size = 20
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=9]
default_font = SubResource( 8 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 58.5, 22.25 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 62.5, 23 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 112.5, 24.5 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 146.25, 38.25 )

[sub_resource type="DynamicFont" id=14]
size = 50
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=15]
default_font = SubResource( 14 )

[node name="test" type="Node2D"]
script = ExtResource( 8 )

[node name="Pixil-frame-0(8)" type="Sprite" parent="."]
position = Vector2( 966, 538 )
scale = Vector2( 2.47143, 2.2825 )
texture = ExtResource( 3 )

[node name="q1" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Pixil-frame-0(8)2" type="Sprite" parent="q1"]
position = Vector2( 530, 275 )
scale = Vector2( 36, 9.5 )
texture = ExtResource( 1 )

[node name="Pixil-frame-0(11)" type="Sprite" parent="q1"]
position = Vector2( 238.143, 278.087 )
scale = Vector2( 5.38571, 2.29125 )
texture = ExtResource( 2 )

[node name="Pixil-frame-0(11)2" type="Sprite" parent="q1"]
position = Vector2( 458.571, 278 )
scale = Vector2( 11.0429, 2.29125 )
texture = ExtResource( 2 )

[node name="Pixil-frame-0(11)3" type="Sprite" parent="q1"]
position = Vector2( 692, 278 )
scale = Vector2( 5.38571, 2.29125 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="q1"]
margin_left = 197.0
margin_top = 195.0
margin_right = 858.0
margin_bottom = 244.0
theme = SubResource( 2 )
text = "Что обозначает имя существительное?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="q1"]
margin_left = 195.0
margin_top = 263.0
margin_right = 346.0
margin_bottom = 325.0
theme = SubResource( 4 )
text = "предмет"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="q1"]
margin_left = 368.0
margin_top = 260.0
margin_right = 542.0
margin_bottom = 322.0
theme = SubResource( 4 )
text = "признак предмета"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="q1"]
margin_left = 645.0
margin_top = 261.0
margin_right = 796.0
margin_bottom = 323.0
theme = SubResource( 4 )
text = "действие"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="q1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="q1/Area2D"]
position = Vector2( 238.5, 279 )
shape = SubResource( 5 )

[node name="Area2D2" type="Area2D" parent="q1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="q1/Area2D2"]
position = Vector2( 458.75, 279.5 )
shape = SubResource( 6 )

[node name="Area2D3" type="Area2D" parent="q1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="q1/Area2D3"]
position = Vector2( 690.75, 277 )
shape = SubResource( 7 )

[node name="q2" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="Pixil-frame-0(8)" type="Sprite" parent="q2"]
position = Vector2( 530, 479 )
scale = Vector2( 36, 7.6 )
texture = ExtResource( 1 )

[node name="Pixil-frame-0(11)" type="Sprite" parent="q2"]
position = Vector2( 238.143, 493 )
scale = Vector2( 5.28571, 2.2825 )
texture = ExtResource( 2 )

[node name="Pixil-frame-0(11)2" type="Sprite" parent="q2"]
position = Vector2( 384.5, 446 )
scale = Vector2( 5.85, 2.2825 )
texture = ExtResource( 2 )
offset = Vector2( -7.62939e-06, 21.0296 )

[node name="Pixil-frame-0(11)3" type="Sprite" parent="q2"]
position = Vector2( 634.071, 494 )
scale = Vector2( 12.5929, 2.2825 )
texture = ExtResource( 2 )

[node name="Label2" type="Label" parent="q2"]
margin_left = 191.0
margin_top = 479.0
margin_right = 293.0
margin_bottom = 521.0
theme = SubResource( 9 )
text = "признак"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="q2"]
margin_left = 340.0
margin_top = 478.0
margin_right = 442.0
margin_bottom = 520.0
theme = SubResource( 9 )
text = "состояние"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="q2"]
margin_left = 516.0
margin_top = 476.0
margin_right = 749.0
margin_bottom = 518.0
theme = SubResource( 9 )
text = "совокупность предметов"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="q2"]
margin_left = 189.0
margin_top = 419.0
margin_right = 808.0
margin_bottom = 495.0
theme = SubResource( 9 )
text = "Что из этого не называют отвлечённые имена существительные?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="q2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="q2/Area2D"]
position = Vector2( 239, 493.25 )
shape = SubResource( 10 )

[node name="Area2D2" type="Area2D" parent="q2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="q2/Area2D2"]
position = Vector2( 385, 494 )
shape = SubResource( 11 )

[node name="Area2D3" type="Area2D" parent="q2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="q2/Area2D3"]
position = Vector2( 634.5, 494.5 )
shape = SubResource( 12 )

[node name="q3" type="Node2D" parent="."]
position = Vector2( 0, 200 )
script = ExtResource( 7 )

[node name="Pixil-frame-0(8)" type="Sprite" parent="q3"]
position = Vector2( 530, 479 )
scale = Vector2( 36, 7.6 )
texture = ExtResource( 1 )

[node name="Pixil-frame-0(11)4" type="Sprite" parent="q3"]
position = Vector2( 778.509, 512 )
scale = Vector2( 6.34911, 2.2825 )
texture = ExtResource( 2 )

[node name="Pixil-frame-0(11)" type="Sprite" parent="q3"]
position = Vector2( 244.571, 513 )
scale = Vector2( 5.84286, 2.2825 )
texture = ExtResource( 2 )

[node name="Pixil-frame-0(11)2" type="Sprite" parent="q3"]
position = Vector2( 386, 465 )
scale = Vector2( 6.1, 2.2825 )
texture = ExtResource( 2 )
offset = Vector2( -7.62939e-06, 21.0296 )

[node name="Pixil-frame-0(11)3" type="Sprite" parent="q3"]
position = Vector2( 575, 512 )
scale = Vector2( 10.3964, 2.2825 )
texture = ExtResource( 2 )

[node name="Label2" type="Label" parent="q3"]
margin_left = 188.0
margin_top = 491.0
margin_right = 290.0
margin_bottom = 533.0
theme = SubResource( 9 )
text = "конкретное"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="q3"]
margin_left = 324.0
margin_top = 491.0
margin_right = 455.0
margin_bottom = 536.0
theme = SubResource( 9 )
text = "отвлечённое"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="q3"]
margin_left = 506.0
margin_top = 489.0
margin_right = 691.0
margin_bottom = 531.0
theme = SubResource( 9 )
text = "собирательное"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="q3"]
margin_left = 189.0
margin_top = 419.0
margin_right = 808.0
margin_bottom = 495.0
theme = SubResource( 9 )
text = "Определите лексико-грамматический разряд существительного:
старьё"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="q3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="q3/Area2D"]
position = Vector2( 244.5, 513 )
shape = SubResource( 10 )

[node name="Area2D2" type="Area2D" parent="q3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="q3/Area2D2"]
position = Vector2( 384.5, 513 )
shape = SubResource( 11 )

[node name="Area2D3" type="Area2D" parent="q3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="q3/Area2D3"]
position = Vector2( 581, 512 )
shape = SubResource( 12 )

[node name="Area2D4" type="Area2D" parent="q3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="q3/Area2D4"]
position = Vector2( 779, 512 )
shape = SubResource( 11 )

[node name="Label5" type="Label" parent="q3"]
margin_left = 717.0
margin_top = 493.0
margin_right = 848.0
margin_bottom = 538.0
theme = SubResource( 9 )
text = "отвлечённое"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="."]

[node name="Pixil-frame-0(11)" type="Sprite" parent="Area2D"]
position = Vector2( 734, 872 )
scale = Vector2( 14.6, 3.85 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 734.25, 871.25 )
shape = SubResource( 13 )

[node name="Label" type="Label" parent="Area2D"]
margin_left = 603.0
margin_top = 830.0
margin_right = 873.0
margin_bottom = 898.0
theme = SubResource( 15 )
text = "результаты"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="q1/Area2D" to="q1" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="q1/Area2D" to="q1" method="_on_Area2D_mouse_exited"]
[connection signal="mouse_entered" from="q1/Area2D2" to="q1" method="_on_Area2D2_mouse_entered"]
[connection signal="mouse_exited" from="q1/Area2D2" to="q1" method="_on_Area2D2_mouse_exited"]
[connection signal="mouse_entered" from="q1/Area2D3" to="q1" method="_on_Area2D3_mouse_entered"]
[connection signal="mouse_exited" from="q1/Area2D3" to="q1" method="_on_Area2D3_mouse_exited"]
[connection signal="mouse_entered" from="q2/Area2D" to="q2" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="q2/Area2D" to="q2" method="_on_Area2D_mouse_exited"]
[connection signal="mouse_entered" from="q2/Area2D2" to="q2" method="_on_Area2D2_mouse_entered"]
[connection signal="mouse_exited" from="q2/Area2D2" to="q2" method="_on_Area2D2_mouse_exited"]
[connection signal="mouse_entered" from="q2/Area2D3" to="q2" method="_on_Area2D3_mouse_entered"]
[connection signal="mouse_exited" from="q2/Area2D3" to="q2" method="_on_Area2D3_mouse_exited"]
[connection signal="mouse_entered" from="q3/Area2D" to="q3" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="q3/Area2D" to="q3" method="_on_Area2D_mouse_exited"]
[connection signal="mouse_entered" from="q3/Area2D2" to="q3" method="_on_Area2D2_mouse_entered"]
[connection signal="mouse_exited" from="q3/Area2D2" to="q3" method="_on_Area2D2_mouse_exited"]
[connection signal="mouse_entered" from="q3/Area2D3" to="q3" method="_on_Area2D3_mouse_entered"]
[connection signal="mouse_exited" from="q3/Area2D3" to="q3" method="_on_Area2D3_mouse_exited"]
[connection signal="mouse_entered" from="q3/Area2D4" to="q3" method="_on_Area2D4_mouse_entered"]
[connection signal="mouse_exited" from="q3/Area2D4" to="q3" method="_on_Area2D4_mouse_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
